Fixed: wflow-consoleweb - Rich Text Editor - Misaligned heading picker in Quill editor css. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/js/quill/quill.custom.css
+++ b/wflow-consoleweb/src/main/webapp/js/quill/quill.custom.css
@@ -11,3 +11,7 @@
     left:0px;
     right:0px;
 }
+body.rtl .ql-font .ql-picker-label,
+body.rtl .ql-header .ql-picker-label {
+    text-align: left;
+}
